# minimal-doctest-cpp

./: CMakeLists.txt  README.md
src/: binomial.hpp  factorial.hpp  misc.cpp  misc.hpp
test/: CMakeLists.txt  main.cpp  test_binomial.cpp  test_factorial.cpp
